fix wrong navbar alignment in small screens of 992px

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -51,7 +51,7 @@ p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
-    @media(min-width:768px) {
+    @media(min-width:992px) {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
@@ -184,7 +184,7 @@ a {
             }
         }
     }
-    @media(min-width:768px) {
+    @media(min-width:992px) {
         height: 100%;
         padding: 0;
         .intro-body {
@@ -368,7 +368,7 @@ body {
     animation: blink 0.7s infinite;
     font-size: 16px;
     vertical-align: top;
-    @media(min-width:768px) {
+    @media(min-width:992px) {
         font-size: 22px;
     }
 }
@@ -423,7 +423,7 @@ body {
       > div {
          background-color: rgba(20, 20, 20, 0.6);
          padding: 10px;
-         @media(min-width:768px) {
+         @media(min-width:992px) {
            padding: 20px 0;
          }
          #hand-swipe {
